Upgrade logback-classic to 1.4.14; align failsafe and surefire configs to 4.x branch changes